@@ -1,3 +1,7 @@
+2017-03-21 belangeo <belangeo@gmail.com>
+
+    * Updated portaudio interface to make it much more secure.
+
 2017-03-20 belangeo <belangeo@gmail.com>
 
     * Added setIsJackTransportSlave method to Server object (it allows to
